[gd_scene load_steps=41 format=2]

[ext_resource path="res://EnemeyContainer/Final_type/final_boss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/PngsFiles/Final_boss_final.png" type="Texture" id=2]
[ext_resource path="res://EnemeyContainer/Basic_enemies/laser_dragon_beam.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Enemy/PngsFiles/Knight_sword.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/PngsFiles/Projectiles_UI_final_boss.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/PngsFiles/finger_bone-1.png.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy/PngsFiles/target.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.5, 46 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 33.9622, 136.557 )

[sub_resource type="CapsuleShape2D" id=17]
radius = 113.207
height = 266.038

[sub_resource type="Animation" id=4]
resource_name = "Left_fire"
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Right_fire"
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.6958, -0.0341714 ]
}

[sub_resource type="Animation" id=7]
resource_name = "full_screen_fire_LtoR"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, 90.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "full_screen_fire_RtoL"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, -90.0 ]
}

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 57, 48.5 )

[sub_resource type="Animation" id=55]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lower:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=77]
resource_name = "appear"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lower:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.53, 1.57, 1.61, 1.65, 1.69, 1.73, 1.76, 1.8, 1.84, 1.88, 1.92, 1.95, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 51, 1 ), Vector2( -60, 1 ), Vector2( 1, 1 ), Vector2( 51, 1 ), Vector2( -60, 1 ), Vector2( 1, 1 ), Vector2( 51, 1 ), Vector2( -60, 1 ), Vector2( 1, 1 ), Vector2( 51, 1 ), Vector2( -60, 1 ), Vector2( -10, 1 ) ]
}

[sub_resource type="Animation" id=56]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54 ]
}

[sub_resource type="Animation" id=78]
resource_name = "death_loop"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54 ]
}

[sub_resource type="Animation" id=57]
resource_name = "dodge"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=58]
resource_name = "first_spell"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=59]
resource_name = "fourth_walking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=60]
resource_name = "laser_beam"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=61]
resource_name = "second_blink"
length = 0.48
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[sub_resource type="Animation" id=62]
resource_name = "second_charging"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=63]
resource_name = "second_spell"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=64]
resource_name = "second_walking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=65]
resource_name = "third_blink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=66]
resource_name = "third_charging"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=67]
resource_name = "third_spell"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=68]
resource_name = "third_walking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=69]
resource_name = "walking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=70]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Lower/sword1/Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Lower/sword1/Position2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Lower/sword1/Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Lower/sword1/Position2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 78, 14 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Lower/sword1/Position2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/thrust:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/slash:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=71]
resource_name = "appear"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../Lower/sword1/Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Lower/sword1/Position2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/thrust:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/slash:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=73]
resource_name = "beam_slash"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Lower/sword1/Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=74]
resource_name = "beam_slash_finish"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Lower/sword1/Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39, 40, 41, 42 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/slash:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=75]
resource_name = "idle"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Lower/sword1/Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Lower/sword1/Position2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/thrust:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/slash:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Lower/sword1/Position2D/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=72]
resource_name = "multi_thrust"
length = 0.94
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Lower/sword1/Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.06, 0.11, 0.16, 0.21, 0.26, 0.31, 0.36, 0.41, 0.46, 0.51, 0.56, 0.61, 0.66, 0.71, 0.76, 0.81, 0.86 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 12, 13, 14, 15, 16, 17, 12, 13, 14, 15, 17, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Lower/sword1/Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Lower/sword1/Position2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.26, 0.31, 0.56, 0.61, 0.86 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 78, -88 ), Vector2( 179, -88 ), Vector2( 124, -3 ), Vector2( 166, -3 ), Vector2( 84, 103 ), Vector2( 199, 103 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Lower/sword1/Position2D/Sprite/sword_hitbox/thrust:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="ParticlesMaterial" id=76]
emission_shape = 1
emission_sphere_radius = 50.49
flag_disable_z = true
spread = 97.8
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 32.0
radial_accel = 29.33

[node name="KinematicBody2D" type="KinematicBody2D" groups=["boss_group"]]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="weapon2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 276, 577 )
scale = Vector2( 0.489584, 0.489584 )
texture = ExtResource( 5 )
hframes = 2
vframes = 2
frame = 1

[node name="weapon1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 246, 557 )
scale = Vector2( 0.6, 0.628 )
texture = ExtResource( 5 )
hframes = 2
vframes = 2

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 357.0
margin_bottom = 92.0
text = "Text"

[node name="t1" type="Sprite" parent="."]
visible = false
position = Vector2( 196, -78 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17.5, 5 )
shape = SubResource( 1 )

[node name="Lower" type="Sprite" parent="."]
position = Vector2( 1, 1 )
texture = ExtResource( 2 )
hframes = 7
vframes = 11

[node name="sword1" type="Position2D" parent="Lower"]
position = Vector2( 0, -1 )
rotation = 1.5708

[node name="Position2D" type="Position2D" parent="Lower/sword1"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 78, 14 )
rotation = 1.5708
scale = Vector2( 0.706667, 0.706667 )

[node name="Sprite" type="Sprite" parent="Lower/sword1/Position2D"]
position = Vector2( -1487.26, -407.547 )
texture = ExtResource( 4 )
offset = Vector2( 1492.92, 300 )
hframes = 7
vframes = 7

[node name="sword_hitbox" type="Area2D" parent="Lower/sword1/Position2D/Sprite" groups=["enemey_group"]]
position = Vector2( 1485.85, 408.962 )

[node name="thrust" type="CollisionShape2D" parent="Lower/sword1/Position2D/Sprite/sword_hitbox"]
position = Vector2( 4.24545, -106.84 )
shape = SubResource( 16 )
disabled = true

[node name="slash" type="CollisionShape2D" parent="Lower/sword1/Position2D/Sprite/sword_hitbox"]
position = Vector2( -18.4012, -70.7546 )
rotation = 1.5708
shape = SubResource( 17 )
disabled = true

[node name="mage_shots_position" type="Position2D" parent="Lower"]
position = Vector2( 64, -57 )

[node name="laser_axis" type="Position2D" parent="Lower"]
position = Vector2( -1, -1 )

[node name="Line2D" type="Line2D" parent="Lower/laser_axis"]
visible = false
position = Vector2( -4, 3 )
points = PoolVector2Array( 3, -4, 1, 601 )
default_color = Color( 0.992157, 1, 0.0588235, 0.639216 )

[node name="fire_breath" type="RayCast2D" parent="Lower/laser_axis" groups=["enemey_group"]]
position = Vector2( -1, -1 )
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 2
script = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="Lower/laser_axis/fire_breath"]
modulate = Color( 0.952941, 0.12549, 0.0117647, 1 )
position = Vector2( 0.00432123, 27.0371 )
points = PoolVector2Array( -0.00432123, -27.0371, 0.00927584, 58.0371 )
width = 1.0
default_color = Color( 0.909804, 0.109804, 0.027451, 1 )

[node name="end" type="Position2D" parent="Lower/laser_axis/fire_breath"]
position = Vector2( -0.00111285, -6.96289 )
rotation = -0.000159826

[node name="Tween" type="Tween" parent="Lower/laser_axis/fire_breath"]

[node name="Fire_breath_animation" type="AnimationPlayer" parent="Lower/laser_axis/fire_breath"]
root_node = NodePath("../../Head_area")
anims/Left_fire = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Right_fire = SubResource( 6 )
anims/full_screen_fire_LtoR = SubResource( 7 )
anims/full_screen_fire_RtoL = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -18, 5.5 )
shape = SubResource( 54 )

[node name="move_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 55 )
anims/appear = SubResource( 77 )
anims/death = SubResource( 56 )
anims/death_loop = SubResource( 78 )
anims/dodge = SubResource( 57 )
anims/first_spell = SubResource( 58 )
anims/fourth_walking = SubResource( 59 )
anims/laser_beam = SubResource( 60 )
anims/second_blink = SubResource( 61 )
anims/second_charging = SubResource( 62 )
anims/second_spell = SubResource( 63 )
anims/second_walking = SubResource( 64 )
anims/third_blink = SubResource( 65 )
anims/third_charging = SubResource( 66 )
anims/third_spell = SubResource( 67 )
anims/third_walking = SubResource( 68 )
anims/walking = SubResource( 69 )

[node name="sword" type="AnimationPlayer" parent="."]
root_node = NodePath("../move_timer")
anims/RESET = SubResource( 70 )
anims/appear = SubResource( 71 )
anims/beam_slash = SubResource( 73 )
anims/beam_slash_finish = SubResource( 74 )
anims/idle = SubResource( 75 )
anims/multi_thrust = SubResource( 72 )

[node name="smoke" type="Particles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource( 76 )
texture = ExtResource( 6 )

[connection signal="area_entered" from="Lower/sword1/Position2D/Sprite/sword_hitbox" to="." method="_on_sword_hitbox_area_entered"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
